--- a/index.html
+++ b/index.html
@@ -4,17 +4,31 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;800&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;800&family=Work+Sans:ital,wght@0,400;1,300&display=swap"
+      rel="stylesheet"
+    />
     <title>TicketHack</title>
   </head>
-  <body>
+  <body id="bodyHome">
     <div id="container">
       <div id="header">
         <div id="logo">
           <h1 id="title">Tickethack</h1>
         </div>
         <div id="menu">
-          <p class="typoMenu">Cart</p>
-          <p class="typoMenu">Bookings</p>
+          <p class="typoMenu"><a href="cart.html">Cart</a></p>
+          <p class="typoMenu">
+            <a href="booking.html">Bookings</a>
+          </p>
         </div>
       </div>
       <div id="main-content">
@@ -27,13 +41,21 @@
         </div>
         <div id="content">
           <div id="content-left">
-            <input id="add-departure" type="text" placeholder="Departure" />
-            <input id="add-arrival" type="text" placeholder="Arrival" />
-            <input id="select-date" type="date" placeholder="date" />
-            <button type="button" id="btn-search">Search</button>
+            <div id="search-content">
+              <input id="add-departure" type="text" placeholder="Departure" />
+              <div id="barreInput"></div>
+              <input id="add-arrival" type="text" placeholder="Arrival" />
+            </div>
+            <div id="date-input">
+              <input id="select-date" type="date" placeholder="date" />
+            </div>
+            <div id="button-content">
+              <button type="button" id="btn-search">Search</button>
+            </div>
           </div>
           <div id="content-right">
-            <img class="train" src="images/train.png">
+            <img class="train" src="images/train.png" />
+          <div id="barreTrain"></div>
             <p>It's time to book your future trip.</p>
           </div>
         </div>
