Add link to logo + created cart html and its css

--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
     <div id="container">
       <div id="header">
         <div id="logo">
-          <h1 id="title">Tickethack</h1>
+          <h1 id="title"><a id="titleLink" href="index.html">Tickethack</a></h1>
         </div>
         <div id="menu">
-          <p class="typoMenu"><a href="cart.html">Cart</a></p>
+          <p class="typoMenu"><a class="menuLink" href="cart.html">Cart</a></p>
           <p class="typoMenu">
-            <a href="booking.html">Bookings</a>
+            <a class="menuLink" href="booking.html">Bookings</a>
           </p>
         </div>
       </div>
