HTML of 3 pages done + link added everywhere

--- a/booking.html
+++ b/booking.html
@@ -3,7 +3,42 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="cart.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;800&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;800&family=Work+Sans:ital,wght@0,400;1,300&display=swap"
+      rel="stylesheet"
+    />
+    <title>TicketHack - Cart</title>
   </head>
-  <body></body>
+  <body id="bodyCart">
+    <div id="container">
+      <div id="header">
+        <div id="logo">
+          <h1 id="title"><a id="titleLink" href="index.html">Tickethack</a></h1>
+        </div>
+        <div id="menu">
+          <p class="typoMenu"><a class="menuLink" href="cart.html">Cart</a></p>
+          <p class="typoMenu">
+            <a class="menuLink" href="booking.html">Bookings</a>
+          </p>
+        </div>
+      </div>
+      <div id="cartContent">
+        <div id="mainContent">
+          <p>No booking yet.</p>
+          <p>Why not plan a trip?</p>
+        </div>
+      </div>
+    </div>
+
+    <script href="script.js"></script>
+  </body>
 </html>
