--- a/cart.html
+++ b/cart.html
@@ -33,8 +33,8 @@
       </div>
       <div id="cartContent">
         <div id="mainContent">
-          <p>No booking yet.</p>
-          <p>Why no plan a trip?</p>
+          <p>No tickets in your cart.</p>
+          <p>Why not plan a trip?</p>
         </div>
       </div>
     </div>
