add js files for each html page + try my script.js file

--- a/index.html
+++ b/index.html
@@ -61,7 +61,6 @@
         </div>
       </div>
     </div>
-
-    <script href="script.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
