--- a/booking.html
+++ b/booking.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="cart.css" />
+    <link rel="stylesheet" href="booking.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -39,6 +39,6 @@
       </div>
     </div>
 
-    <script href="script.js"></script>
+    <script src="booking.js"></script>
   </body>
 </html>
