Add function into eventslistener + loop

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <div id="content-left">
             <div id="search-content">
               <input id="add-departure" type="text" placeholder="Departure" />
-              <div id="barreInput"></div>
+              <hr id="barreInput" />
               <input id="add-arrival" type="text" placeholder="Arrival" />
             </div>
             <div id="date-input">
@@ -54,9 +54,15 @@
             </div>
           </div>
           <div id="content-right">
-            <img class="train" src="images/train.png" />
-            <div id="barreTrain"></div>
-            <p>It's time to book your future trip.</p>
+            <div id="no-search">
+              <img class="train" src="images/train.png" />
+              <hr id="barreTrain" />
+              <p>It's time to book your future trip.</p>
+            </div>
+            <div id="no-tripFound"></div>
+            
+      
+            </div>
           </div>
         </div>
       </div>
